# virtual-trumpet

./: .gitignore  01_product_requirements.md  02_system_architecture.md  03_physical_model_spec.md  04_midi_performance_spec.md  05_plugin_platform_spec.md  06_implementation_plan.md  07_test_validation_plan.md  08_ai_research_roadmap.md  09_repository_structure.md  10_architecture_decisions.md  11_references_and_open_questions.md  12_ui_architecture.md  CMakeLists.txt  README.md
Source/Core/: Parameters.cpp  Parameters.h  SynthEngine.cpp  SynthEngine.h
Source/DSP/: ParameterSmoother.h  SafetyLimiter.h
Source/Plugin/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Tests/: CMakeLists.txt
Tests/Unit/: UnitTestMain.cpp
cmake/: Dependencies.cmake
